--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
             </div>
             <div class="rght-two">
                 <h1>Flavour Updated</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, excepturi sed, itaque placeat id natus soluta veniam obcaecati qui a laborum laboriosam dolorem illum labore sit, voluptates commodi neque dolores tempore temporibus deleniti? Nobis, ratione hic error quis cum neque nulla laudantium nostrum sit nihil dolorum quisquam enim quaerat, eaque ex sequi, harum totam quia non! Labore, neque! Amet voluptatem illo similique recusandae! Ex quaerat quibusdam asperiores, ducimus tempore magni labore. Tenetur voluptas, quos ex repellendus provident mollitia laboriosam adipisci alias a impedit, cum accusamus rerum delectus eaque facilis veniam quia laborum incidunt ea assumenda! Eos magni aspernatur quod distinctio.</p>
+                <p>
+Ditch the drab, grab the fab! Fanta Orange explodes with juicy sunshine, a fiesta of fizzy citrus that tickles your taste buds and screams fun. Dive in, it's more than a drink, it's a flavor adventure! ⚡️</p>
             </div>
         </div>
         <div class="three">
